--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start -p 4000",
     "lint": "eslint",
-    "docs:pdf": "md-to-pdf docs/user-manual.md && mv docs/user-manual.pdf docs/AutoFlow-사용설명서.pdf"
+    "docs:pdf": "md-to-pdf docs/user-manual.md && mv docs/user-manual.pdf docs/AutoFlow-사용설명서.pdf",
+    "firestore:deploy": "firebase deploy --only firestore:rules"
   },
   "dependencies": {
     "firebase": "^12.8.0",
